subprojects {
    apply plugin: "java"

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.slf4j:slf4j-api:2.0.3'
        implementation 'org.slf4j:slf4j-simple:2.0.3'

        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
    }

    test {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
        }
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }

    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }

    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
    }

}

project(':jep-384_records') {}
project(':jep-358_helpful-npe') {}
project(':jep-378_text-blocks') {}

project(':proxy-server') {}
project(':entropy-demo') {}
project(':web-server-demo') {}
project(':jce-demo') {}
project(':timezone-demo') {}